# PNPD

./: .gitignore  README.md  main.py  mathExtras.py  math_extras.py  plot_extras.py  pyproject.toml  requirements.txt  schedulers.py  solvers.py  torchExtras.py  utilities.py
PNPD/: __init__.py  math_extras.py  plot_extras.py  schedulers.py  solvers.py
examples/: PNPD_NPDIT_k.py  PNPD_bootstrap.py  PNPD_comparison.py  PNPD_extrapolation.py  PNPD_non_stationary.py  PNPD_nu.py  PNPD_proposed.py  constants.py  context.py  generate_blurred_image.py
examples/example_1/: PNPD_NE_nu_k_1.py  PNPD_NPDIT_k.py  PNPD_bootstrap.py  PNPD_comparison.py  PNPD_extrapolation.py  PNPD_non_stationary.py  PNPD_nu.py  PNPD_nu_k_1.py  PNPD_reconstructions.py  init.py
examples/example_2/: PNPD_comparison.py  PNPD_proposed.py  PNPD_reconstructions.py  init.py
examples/example_3/: PNPD_comparison.py  PNPD_proposed.py  PNPD_reconstructions.py  context.py  init.py
tests/: NPD.py  PNPD_NPDIT.py  PNPD_NPDIT_k.py  PNPD_bootstrap.py  PNPD_comparison.py  PNPD_extrapolation.py  PNPD_non_stationary.py  PNPD_nu.py  PNPD_poly  PNPD_poly.py  PNPD_proposed.py  PNPD_test.py  constants.py  generateBlurredImage.py  generate_blurred_image.py  grayscaleGenerateBlurredImage.py  grayscaleNPD.py  grayscaleNPDIT.py  plotExtras.py  plot_extras.py  rgbGenerateBlurredImage.py  rgbNPD.py  rgbNPDIT.py  torchGrayscaleNPDIT.py  torchRgbNPDIT.py  torchTest.py
tests/example_1/: PNPD_NE_nu_k_1.py  PNPD_NPDIT_k.py  PNPD_bootstrap.py  PNPD_comparison.py  PNPD_extrapolation.py  PNPD_non_stationary.py  PNPD_nu.py  init.py  (+2 more)
(+57 files in other folders)
